deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firstpod-deployment
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
            - name: shared-volume
              mountPath: /homework
          lifecycle:
            preStop:
              exec:
                command: ["rm", "/homework/index.html"]
          readinessProbe:
            exec:
              command:
                - cat
                - /homework/index.html
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: shared-volume
          emptyDir: {}
        - name: nginx-conf
          configMap:
            name: nginx-config
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: homework
                operator: In
                values:
                - "true"
