pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: firstpod
  namespace: homework
spec:
  volumes:
    - name: shared-volume
      emptyDir: {}

  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 8000
      volumeMounts:
        - name: shared-volume
          mountPath: /usr/share/nginx/html
      lifecycle:
        preStop:
          exec:
            command: ["rm", "/usr/share/nginx/html/index.html"]
