web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-service
  namespace: homework
spec:
  selector:
    app: web-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
