ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: first-ingress
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: "homework.otus"
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /index.html|homepage
            backend:
              service:
                name: web-server-service
                port:
                  number: 80
